# generic-device-plugin

./: .gitignore  Cargo.toml  LICENSE  build.rs
examples/: mock.rs
proto/: v1beta1.proto
src/: lib.rs  service.rs
