[package]
name = "generic-device-plugin"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Direktor799/generic-device-plugin"
authors = ["Wenyu Su <priceclaptrap@hotmail.com>"]
description = "k8s device plugin framework for general usage"
keywords = ["device", "plugin", "kubernetes", "k8s"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
notify = { version = "6.1.1", default-features = false }
once_cell = "1.19.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.11.0"
tower = "0.4.13"
tracing = "0.1.40"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
